# Polymarket-Analysis-BIT-Capital

./: .gitignore  README.md  mindmap.html  pyproject.toml  requirements.txt  scheduler.py
db/: schema.sql  schema2.sql  schema3.sql
pipeline/: backfill_enrichment.py  backtest.py  dig_deeper_analysis.py  explore_polymarket_news.py  extract.py  filter.py  ingest.py  irrelevant_tags.py  real_time_price.py  report_generator.py  run_pipeline.py  scheduler.py  stage1_filter.py  stage2_filter.py
test/: test_db.py  test_gemini.py  test_gemini_limits.py  test_mistral.py
utils/: supabase_client.py
webapp/: streamlit_app.py
