[project]
name = "polymarket-analysis-bit-capital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.73.1",
    "groq>=1.2.0",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "streamlit>=1.56.0",
    "supabase>=2.29.0",
    "yfinance>=1.3.0",
]
