[project]
name = "polymarket-analysis-bit-capital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.1",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.73.1",
    "groq>=1.2.0",
    "mistralai>=2.4.4",
    "openpyxl>=3.1.5",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "supabase>=2.29.0",
    "tavily-python>=0.7.24",
    "yfinance>=1.3.0",
]
